@@ -324,13 +324,13 @@ Increase this value when unexpected error frequently occurs."
 	 (buffer (url-retrieve-synchronously url))
 	 ret)
     (unless (bufferp buffer)
-      (error (mixi-message "Cannot retrieve")))
+      (error (mixi-message "Cannot retrieve: " url)))
     (with-current-buffer buffer
       (goto-char (point-min))
       (while (looking-at "HTTP/[0-9]+\\.[0-9]+ [13][0-9][0-9]")
 	(delete-region (point) (re-search-forward "\r?\n\r?\n")))
       (unless (looking-at "HTTP/[0-9]+\\.[0-9]+ 200")
-	(error (mixi-message "Cannot retrieve")))
+	(error (mixi-message "Cannot retrieve: " url)))
       (delete-region (point) (re-search-forward "\r?\n\r?\n"))
       (setq ret (decode-coding-string (buffer-string) mixi-coding-system))
       (kill-buffer buffer)
@@ -346,7 +346,7 @@ Increase this value when unexpected error frequently occurs."
   (let ((url (mixi-expand-url url)))
     (with-temp-buffer
       (if (not (string= (w3m-retrieve url nil nil post-data) "text/html"))
-	  (error (mixi-message "Cannot retrieve"))
+	  (error (mixi-message "Cannot retrieve: " url))
 	(w3m-decode-buffer url)
 	(let ((ret (buffer-substring-no-properties (point-min) (point-max))))
 	  (mixi-parse-buffer url ret post-data))))))
@@ -387,7 +387,7 @@ Increase this value when unexpected error frequently occurs."
       (while (looking-at "HTTP/[0-9]+\\.[0-9]+ [13][0-9][0-9]")
 	(delete-region (point) (re-search-forward "\r?\n\r?\n")))
       (unless (looking-at "HTTP/[0-9]+\\.[0-9]+ 200")
-	(error (mixi-message "Cannot retrieve")))
+	(error (mixi-message "Cannot retrieve: " url)))
       (delete-region (point) (re-search-forward "\r?\n\r?\n"))
       (setq ret (decode-coding-string (buffer-string) mixi-coding-system))
       (mixi-parse-buffer url ret post-data))))
